[tool.poetry]
name = "cursivepy"
version = "0.4.1"
description = ""
authors = ["Rodrigo Godinho <god@meistrari.com>", "Henrique Cunha <henrique@meistrari.com>"]
readme = "README.md"
packages = [{include = "cursive"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
tiktoken = "^0.4.0"
openai = "^0.27.8"
anthropic = "^0.3.6"
pydantic = "^1.9.0"
cohere = "^4.19.3"
tokenizers = "^0.13.3"
replicate = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
